# agentbanking

./: .dockerignore  .env.production.example  .gitignore  .gitleaks.toml  .prettierignore  .snyk  API.md  ARCHITECTURE.md  AUDIT-COMPREHENSIVE-2026-06.md  CHANGELOG-2weeks-May15-29-2026.md  CHANGELOG-3days-May29-Jun01-2026.md  CHANGELOG-production-v6.md  CHANGELOG-sprint89.md  CHANGELOG-sprint90.md  CHANGELOG-sprint91.md  CHANGELOG-sprint92.md  CHANGELOG-sprint93.md  CHANGELOG-sprint94.md  CHANGELOG-sprint95.md  CHANGELOG.md  CHANGELOG_PHASE159.md  KEYCLOAK_SETUP.md  PLATFORM_RECOMMENDATIONS_SPRINT38.md  PRODUCTION_READINESS.md  PRODUCTION_READINESS_FINAL.md  PRODUCTION_READINESS_v2.md  README.md  SECURITY-AUDIT-SPRINT46.md  SECURITY-AUDIT-SPRINT49.md  SECURITY_AUDIT_FINAL.md  SECURITY_AUDIT_SPRINT35.md  SECURITY_AUDIT_SPRINT36.md  SECURITY_AUDIT_SPRINT37.md  SECURITY_AUDIT_SPRINT38.md  SECURITY_AUDIT_SPRINT39.md  SECURITY_POSTURE.md  deployment_and_testing.sh  docker-compose.final.yml  docker-compose.integration-test.yml  docker-compose.optimized.yml  (+33 more)
server/ecommerce-cart-rust/: Cargo.toml
server/ecommerce-cart-rust/src/: cart.rs  checkout.rs  main.rs  offline.rs
services/cbn-tiered-kyc/: Cargo.toml
services/ddos-shield/: Cargo.toml
services/ddos-shield/src/: main.rs
services/fluvio-consumer/: Cargo.toml
services/fluvio-consumer/src/: main.rs
services/i18n-currency/: Cargo.toml  Dockerfile
services/i18n-currency/src/: main.rs
services/ledger-bridge/: Cargo.toml
services/ledger-bridge/src/: main.rs
services/ledger-integrity-validator/: Cargo.toml
services/payment-corridors-service/: Cargo.toml  Dockerfile  build.rs  readme.md
services/payment-corridors-service/config/: default.toml
services/payment-corridors-service/proto/: corridor.proto
services/payment-corridors-service/src/: config.rs  error.rs  main.rs  router.rs  service.rs
services/payment-corridors-service/src/rails/: cips.rs  mod.rs  papss.rs  swift.rs
services/payment-split-engine/: Cargo.toml
services/pos-printer/: Cargo.toml  Dockerfile
services/pos-printer/src/: main.rs  tests.rs
services/rust/: Cargo.toml  Dockerfile.consolidated
services/rust/adaptive-compression/: Cargo.toml
services/rust/adaptive-compression/src/: main.rs
services/rust/agritech-payments/: Cargo.toml
services/rust/agritech-payments/src/: main.rs
services/rust/ai-credit-scoring/: Cargo.toml  Dockerfile
services/rust/ai-credit-scoring/src/: main.rs
services/rust/audit-chain/: Cargo.toml
services/rust/audit-chain/src/: main.rs
services/rust/bandwidth-optimizer/src/: main.rs
services/rust/billing-event-processor/: Cargo.toml  Dockerfile
services/rust/billing-event-processor/src/: main.rs
services/rust/billing-stream-processor/src/: main.rs
services/rust/bnpl-engine/: Cargo.toml  Dockerfile
services/rust/bnpl-engine/src/: main.rs
services/rust/carbon-credit-marketplace/: Cargo.toml  Dockerfile
services/rust/carbon-credit-marketplace/src/: main.rs
services/rust/carrier-performance-reporter/src/: main.rs
services/rust/carrier-ranking-engine/: Cargo.toml
services/rust/carrier-ranking-engine/src/: main.rs
services/rust/cbn-tiered-kyc/src/: main.rs
services/rust/coalition-loyalty/: Cargo.toml
services/rust/coalition-loyalty/src/: main.rs
services/rust/connection-quality-monitor/src/: main.rs
services/rust/contract-testing/: Cargo.toml  Dockerfile
services/rust/contract-testing/src/: main.rs
services/rust/conversational-banking/: Cargo.toml
services/rust/conversational-banking/src/: main.rs
services/rust/ddos-shield/src/: main.rs
services/rust/digital-identity-layer/: Cargo.toml
services/rust/digital-identity-layer/src/: main.rs
services/rust/education-payments/: Cargo.toml  Dockerfile
services/rust/education-payments/src/: main.rs
services/rust/embedded-finance-anaas/: Cargo.toml
services/rust/embedded-finance-anaas/src/: main.rs
services/rust/fee-splitter-realtime/src/: main.rs
services/rust/fluvio-consumer/: Cargo.toml
services/rust/fluvio-consumer/src/: main.rs
services/rust/fluvio-smartmodule/src/: lib.rs  main.rs
services/rust/fraud-engine/: Cargo.toml
services/rust/fund-flow-settlement/: Cargo.toml  Dockerfile
services/rust/health-insurance-micro/: Cargo.toml
services/rust/high-perf-tx-engine/: Cargo.toml  Dockerfile
services/rust/iot-smart-pos/: Cargo.toml  Dockerfile
services/rust/kyc-verifiable-credentials/: Cargo.toml
services/rust/ledger-bridge/: Cargo.toml
services/rust/multi-sim-failover/: Cargo.toml
services/rust/nfc-tap-to-pay/: Cargo.toml  Dockerfile
services/rust/offline-queue/: Cargo.toml
services/rust/open-banking-api/: Cargo.toml
services/rust/payment-split-engine/: Dockerfile
services/rust/payroll-disbursement/: Cargo.toml  Dockerfile
services/rust/pension-micro/: Cargo.toml  Dockerfile
services/rust/pii-encryption-vault/: Cargo.toml  Dockerfile
services/rust/pos-printer/: Cargo.toml
services/rust/pos-self-healing/: Cargo.toml
services/rust/qr-payment-service/: Cargo.toml
services/rust/satellite-connectivity/: Cargo.toml  Dockerfile
services/rust/stablecoin-rails/: Cargo.toml  Dockerfile
services/rust/super-app-framework/: Cargo.toml  Dockerfile
services/rust/terminal-heartbeat/: Cargo.toml
services/rust/tigerbeetle-batch-client/: Cargo.toml
services/rust/tigerbeetle-middleware-bridge/: Cargo.toml  Dockerfile
services/rust/tokenized-assets/: Cargo.toml  Dockerfile
services/rust/transaction-queue/: Cargo.toml  Dockerfile
services/rust/wearable-payments/: Cargo.toml  Dockerfile
services/sanctions-etl/: Cargo.toml  Dockerfile
services/sanctions-etl/src/: main.rs
services/sim-orchestrator-service/: Cargo.toml  Dockerfile  README.md
services/sim-orchestrator-service/.cargo/: config.toml
services/sim-orchestrator-service/src/: conn.rs  hal.rs  lib.rs  main.rs  mux.rs  probe.rs  relay.rs  scorer.rs  sim.rs  watchdog.rs  wifi.rs
services/sim-orchestrator-service/tests/: integration.rs
services/tx-validator/: Cargo.toml
services/tx-validator/src/: main.rs  tests.rs
(+11503 files in other folders)
