[package]
name = "cbn-tiered-kyc"
version = "1.0.0"
edition = "2021"
description = "CBN Tier 1/2/3 KYC rules engine — tier assignment, limit enforcement, upgrade path assessment, compliance scoring"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = "0.3"
