[package]
name = "ddos-shield"
version = "1.0.0"
edition = "2021"
authors = ["54agent Platform Team"]
description = "High-performance Rust DDoS protection engine for 54agent Agency Banking Platform"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
axum = { version = "0.7", features = ["json"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace", "timeout"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
dashmap = "5.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
uuid = { version = "1.6", features = ["v4"] }
sha2 = "0.10"
hex = "0.4"
actix-web = { version = "4.4", optional = true }  # Alternative HTTP framework
actix-rt = { version = "2.9", optional = true }

[features]
default = []
actix = ["actix-web", "actix-rt"]
