[package]
name = "fluvio-consumer"
version = "1.0.0"
edition = "2021"
description = "54agent Fluvio→OpenSearch transaction event consumer"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
warp = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
