[package]
name = "ledger-bridge"
version = "14.0.0"
edition = "2021"
authors = ["54agent Platform Team"]
description = "High-performance Rust ledger bridge - TigerBeetle integration with double-entry accounting"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
axum = { version = "0.7", features = ["json"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"], default-features = false }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
prometheus = "0.13"
thiserror = "1.0"
anyhow = "1.0"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
async-trait = "0.1"
tokio-retry = "0.3"

[[bin]]
name = "ledger-bridge"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
