[package]
name = "ledger-integrity-validator"
version = "0.1.0"
edition = "2021"
authors = ["54agent Engineering <engineering@54agent.com>"]
description = "54agent Agency Banking Platform - ledger-integrity-validator microservice"

[[bin]]
name = "service"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rdkafka = { version = "0.36", features = ["cmake-build"] }
redis = { version = "0.24", features = ["tokio-comp"] }
uuid = { version = "1.7", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
prometheus = "0.13"
