[package]
name = "payment-corridor"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
chrono = { version = "0.4", features = ["clock", "serde"] }
config = "0.14"
metrics = "0.23"
metrics-exporter-prometheus = "0.15"
prost = "0.13"
serde = { version = "1", features = ["derive"] }
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tonic = { version = "0.12", features = ["transport"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

[build-dependencies]
tonic-build = "0.12"
