[package]
name = "rust-pos-printer"
version = "14.0.0"
edition = "2021"
description = "54agent ESC/POS Thermal Printer Service — full protocol for all 10 P-UP IFS terminals"

[[bin]]
name = "pos-printer"
path = "src/main.rs"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["json", "ws"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Redis
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }

# HTTP client (for calling other services)
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Prometheus metrics
prometheus = { version = "0.13", features = ["process"] }

# UUID
uuid = { version = "1", features = ["v4"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1"
thiserror = "1"

# Encoding
base64 = "0.21"
hex = "0.4"

# QR code generation for receipts
qrcode = "0.14"
image = "0.24"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
