[package]
name = "sanctions-etl"
version = "1.0.0"
edition = "2021"
description = "ETL service for ingesting PEP/sanctions lists from UN, OFAC, EU, UK, CBN, EFCC"

[dependencies]
actix-web = "4"
actix-rt = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
csv = "1.3"
quick-xml = "0.36"
strsim = "0.11"
log = "0.4"
env_logger = "0.11"
