[package]
name = "audit-chain"
version = "1.0.0"
edition = "2021"
description = "Cryptographic hash-chain audit log for tamper-proof insider threat detection"

[dependencies]
actix-web = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
reqwest = { version = "0.11", features = ["json"] }
