[package]
name = "fraud-detection-engine"
version = "14.0.0"
edition = "2021"
authors = ["54Link Platform Team"]
description = "High-performance Rust fraud detection engine for 54Link Agency Banking Platform"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# HTTP server
axum = { version = "0.7", features = ["json", "tower-log"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace", "timeout"] }

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }

# Redis
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }

# Kafka
kafka = "0.10"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Metrics
prometheus = { version = "0.13", features = ["process"] }
axum-prometheus = "0.6"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# UUID
uuid = { version = "1.6", features = ["v4", "serde"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Math / ML
statrs = "0.16"
ndarray = "0.15"

# Config
dotenvy = "0.15"
config = "0.14"

# Async traits
async-trait = "0.1"

# Rate limiting
governor = "0.6"

# Hashing
sha2 = "0.10"
hex = "0.4"

[[bin]]
name = "fraud-engine"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
