[package]
name = "fund-flow-settlement"
version = "1.0.0"
edition = "2021"
description = "High-performance fund flow settlement engine — BNPL installment scheduling, FX rate engine, GL reconciliation"

[dependencies]
actix-web = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
