[package]
name = "high-perf-tx-engine"
version = "1.0.0"
edition = "2021"
description = "High-performance transaction engine for millions of TPS"

[dependencies]
tokio = { version = "1", features = ["full", "parking_lot"] }
axum = { version = "0.7", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "fast-rng"] }
dashmap = "6"
crossbeam-channel = "0.5"
crossbeam-queue = "0.3"
parking_lot = "0.12"
bytes = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
target-cpu = "native"
