[package]
name = "tigerbeetle-batch-client"
version = "1.0.0"
edition = "2021"
description = "High-performance batch client for TigerBeetle ledger"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "fast-rng"] }
crossbeam-channel = "0.5"
parking_lot = "0.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
