[package]
name = "tigerbeetle-middleware-bridge"
version = "1.0.0"
edition = "2021"
description = "Rust bridge connecting TigerBeetle ledger events to Kafka, Redis, OpenSearch, Lakehouse, and OpenAppSec"

[[bin]]
name = "tb-middleware-bridge"
path = "src/main.rs"

[dependencies]
actix-web = "4"
actix-rt = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
redis = { version = "0.25", features = ["tokio-comp"] }
rdkafka = { version = "0.36", features = ["cmake-build"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = "0.3"
sha2 = "0.10"
hex = "0.4"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "json"] }
