[package]
name = "pos-fraud-smartmodule"
version = "1.0.0"
edition = "2021"
description = "54Link Fluvio SmartModule: real-time fraud detection filter for transaction stream"

[lib]
name = "pos_fraud_smartmodule"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
strip = "symbols"

[[bin]]
name = "test_smartmodule"
path = "src/main.rs"
