[package]
name = "kyb-risk-engine"
version = "1.0.0"
edition = "2021"
description = "KYB Risk Engine — AML/CFT screening, PEP checks, sanctions, ML risk scoring"

[dependencies]
axum = "0.7"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
